# filefind

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  Makefile.am  README.md  args.C  args.H  cmdline.C  cmdline.H  config.C  config.H  configure.ac  error.H  filter.C  filter.H  main.C  re2_regex.C  re2_regex.H  regex.C  regex.H  search.C  search.H  search_unix.C  search_unix.H  search_win32.C  search_win32.H  std_regex.C  std_regex.H  utils.C  utils.H  vcpkg.json
.github/workflows/: cmake.yml
cmake/: Findre2.cmake
