bin_PROGRAMS = filefind
filefind_SOURCES = \
    main.C \
    args.H \
    args.C \
    cmdline.H \
    cmdline.C \
    config.H \
    config.C \
    error.H \
    filter.H \
    filter.C \
    regex.H \
    std_regex.H \
    std_regex.C \
    search.H \
    search.C \
    search_unix.H \
    search_unix.C \
    utils.H \
    utils.C \
    fmt/color.h \
    fmt/core.h \
    fmt/format-inl.h \
    fmt/format.cc \
    fmt/format.h
filefind_CPPFLAGS = -D_UNIX -D_AUTOTOOLS
